[package]
name = "haalka_futures_signals_ext"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/haalka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = { version = "0.3.33", default-features = false }
pin-project = { version = "1.0.11", default-features = false }
haalka_futures_util_ext = { path = "../futures_util_ext", default-features = false }
