[package]
name = "haalka_futures_util_ext"
version = "0.0.1"
edition = "2021"
description = "vendored version of MoonZoon's futures_util_ext, as it is yet to be released as a crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/haalka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = { version = "1.0.11", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["std", "sink"] }
