[package]
name = "static_ref_macro"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.76", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.48", features = ["full", "parsing"], default-features = false }
