[package]
name = "frontend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
zoon.workspace = true
web-sys = {version = "*", features = ["HtmlObjectElement"]}
rust_hsluv = { version = "*", default-features = false, package = "rust-hsluv" }
rand = { version = "*", default-features = false }
getrandom = { version = "*", features = ["js"], default-features = false }
